# example-rag-pipeline

./: .gitignore  LICENCE.txt  README.md  install.sh  pyproject.toml  setup.sh
app/: app_config.yaml  config.yaml  launch.py  launch.sh  launch_chroma.sh
erp/components/: __init__.py  ingress.py
erp/deployments/: __init__.py  chroma_client.py  embed_and_search.py  example_service.py  rag.py  text_splitter.py
erp/utils/: __init__.py  config_reader.py
tests/: flip.sh  log.html  output.xml  rag_app_test_data.robot  rag_app_tests.robot  report.html
tests/data/: request_1.json  request_2.json
