[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
  "erp",
]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[options]
packages = [
  "find"
]

[project]
name = "erp"
version = "0.1.0"
dependencies = [
  "torch",
  "transformers",
  "starlette",
  "ray[serve]==2.10.0",
  "chromadb",
  "langchain==0.0.336",
  "gpt4all",
  "sentence-transformers"
]

requires-python = ">=3.11"
authors = [
  {name = "Andrew Sommerlot", email = "andrewsommerlot@gmail.com"},
]
maintainers = [
  {name = "Andrew Sommerlot", email = "andrewsommerlot@gmail.com"},
]
description = "Rag pipeline with api endpoint for example purposes"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["rag", "llm", "pipeline", "api", "example"]
classifiers = [
  "Development Status :: 0 - alpha",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
  'robotframework',
  'robotframework-requests',
  'mkdocs',
  'mkdocs-material',
  'mkdocstrings',
]

[project.urls]
Homepage = "None"
Documentation = "None"
Repository = "https://github.com/drmerlot/example-rag-pipeline"
"Bug Tracker" = "https://github.com/drmerlot/example-rag-pipeline"
Changelog = "https://github.com/drmerlot/example-rag-pipeline/CHANGELOG.md"

